some angular tunning

--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -93,7 +93,7 @@
                           &lsaquo;
                         </div>
                         <div class="month">
-                          {{month}}
+                          {{month_t}}
                         </div>
                         <div class="clndr-next-button" ng-click="clndr.forward()">
                           &rsaquo;
