--- a/app/views/projects/_prioritized_modal.html.erb
+++ b/app/views/projects/_prioritized_modal.html.erb
@@ -11,8 +11,11 @@
     </div>
     <div class="col-md-8">
       <div class="form-group">
-        <label for="big-difference"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="big-difference-score" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.big_difference_score">
+        <label for="big-difference"><%= t('.score') %>: </label>
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.big_difference_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.big_difference_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.big_difference_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="big-difference-score" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.big_difference_score"> -->
       </div>
       <div class="form-group">
         <label for="big-difference-arguments"><%= t('.main_arguments') %></label>
@@ -28,7 +31,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="multiplying-effect"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="multiplying-effect" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.multiplying_effect_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.multiplying_effect_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.multiplying_effect_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.multiplying_effect_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="multiplying-effect" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.multiplying_effect_score"> -->
       </div>
       <div class="form-group">
         <label for="multiplying-effect-arguments"><%= t('.main_arguments') %></label>
@@ -44,7 +50,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="catalytic"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="catalytic" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.catalytic_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.catalytic_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.catalytic_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.catalytic_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="catalytic" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.catalytic_score"> -->
       </div>
       <div class="form-group">
         <label for="catalytic-arguments"><%= t('.main_arguments') %></label>
@@ -64,7 +73,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="demand"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="demand" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.demand_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.demand_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.demand_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.demand_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="demand" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.demand_score"> -->
       </div>
       <div class="form-group">
         <label for="demand-arguments"><%= t('.main_arguments') %></label>
@@ -80,7 +92,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="hooks-processes"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="hooks-processes" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.hooks_processes_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.hooks_processes_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.hooks_processes_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.hooks_processes_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="hooks-processes" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.hooks_processes_score"> -->
       </div>
       <div class="form-group">
         <label for="hooks-processes-arguments"><%= t('.main_arguments') %></label>
@@ -96,7 +111,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="intuitive"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="intuitive" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.intuitive_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.intuitive_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.intuitive_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.intuitive_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="intuitive" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.intuitive_score"> -->
       </div>
       <div class="form-group">
         <label for="intuitive-arguments"><%= t('.main_arguments') %></label>
@@ -116,7 +134,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="alignment"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="alignment" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.alignment_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.alignment_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.alignment_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.alignment_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="alignment" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.alignment_score"> -->
       </div>
       <div class="form-group">
         <label for="alignment-arguments"><%= t('.main_arguments') %></label>
@@ -132,7 +153,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="added-value"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="added-value" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.added_value_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.added_value_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.added_value_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.added_value_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="added-value" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.added_value_score"> -->
       </div>
       <div class="form-group">
         <label for="added-value-arguments"><%= t('.main_arguments') %></label>
@@ -148,7 +172,10 @@
     <div class="col-md-8">
       <div class="form-group">
         <label for="loss-or-gain"><%= t('.score') %></label>
-        <input type="number" class="form-control" id="loss-or-gain" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.loss_gain_score">
+        <label> 1 <input type="radio" class="form-control" label="1" ng-model="current_objective.loss_gain_score" value="1"></label>
+        <label> 2 <input type="radio" class="form-control" label="2" ng-model="current_objective.loss_gain_score" value="2"></label>
+        <label> 3 <input type="radio" class="form-control" label="3" ng-model="current_objective.loss_gain_score" value="3"></label>
+        <!-- <input type="number" class="form-control" id="loss-or-gain" placeholder="<%= t('.score_placeholder') %>" min="1" max="3" ng-model="current_objective.loss_gain_score"> -->
       </div>
       <div class="form-group">
         <label for="loss-or-gain-arguments"><%= t('.main_arguments') %></label>
