--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -90,10 +90,11 @@
                     <td class="text-center">
                       <i class="fa fa-check" ng-if="objective.completion_mark"></i>
                     </td>
-                    <td class="text-center">{{ objective.big_difference_score + objective.multiplying_effect_score + objective.catalytic_score }}</td>
-                    <td class="text-center">{{ objective.demand_score + objective.hooks_processes_score + objective.intuitive_score }}</td>
-                    <td class="text-center">{{ objective.alignment_score + objective.added_value_score + objective.loss_gain_score }}</td>
-                    <td class="text-center">{{ objective.big_difference_score + objective.multiplying_effect_score + objective.catalytic_score + objective.demand_score + objective.hooks_processes_score + objective.intuitive_score + objective.alignment_score + objective.added_value_score + objective.loss_gain_score }}</td>
+                    <!-- <td class="text-center">{{ objective.big_difference_score + objective.multiplying_effect_score + objective.catalytic_score }}</td> -->
+                    <td class="text-center">{{ (objective.big_difference_score * 1) + (objective.multiplying_effect_score * 1) + (objective.catalytic_score * 1)   }}</td>
+                    <td class="text-center">{{ (objective.demand_score * 1) + (objective.hooks_processes_score * 1) + (objective.intuitive_score * 1)   }}</td>
+                    <td class="text-center">{{ (objective.alignment_score * 1) + (objective.added_value_score * 1) + (objective.loss_gain_score * 1)   }}</td>
+                    <td class="text-center">{{ (objective.big_difference_score * 1) + (objective.multiplying_effect_score * 1) + (objective.catalytic_score * 1) + (objective.demand_score * 1) + (objective.hooks_processes_score * 1) + (objective.intuitive_score * 1) + (objective.alignment_score * 1) + (objective.added_value_score * 1) + (objective.loss_gain_score * 1) }}</td>
                     <td class="text-center">
                       <i class="fa fa-check" ng-if="objective.prioritized"></i>
                     </td>
